<resources>
    <string name="app_name">Quotum</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">Login Now</string>
    <string name="signup">SignUp</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <string name="login_button">"Continue with Email/Mobile"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_search_trip">Search Trip</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_loved">Loved Trips</string>
    <string name="menu_history">Trip History</string>
    <string name="menu_support">Support</string>
    <string name="menu_purchase">Purchase</string>
    <string name="menu_logout">Logout</string>

    <string name="facebook_app_id">701521580295835</string>
    <string name="fb_login_protocol_scheme">fb2074930896143637</string>

    <string name="client_id">your_client_id</string>
    <string name="redirect_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="get_user_info_url">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="no_trips_available">There are No Trips Nearby</string>
    <string name="post_trip">Post Trip</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
