<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_trip"
            android:title="@string/menu_search_trip" />
        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_trip_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_loved_trips"
            android:title="@string/menu_loved" />
    </group>

    <item android:title="" >
        <menu>
            <item
                android:id="@+id/nav_purchase"
                android:title="@string/menu_purchase" />
            <item
                android:id="@+id/nav_support"
                android:title="@string/menu_support" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
