<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search_trip"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_search_trip"
        android:name="com.quotum.quotum.quotum.ui.searchTrip.SearchTripFragment"
        android:label="@string/menu_search_trip"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.quotum.quotum.quotum.ui.myProfile.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_posttrip" />

    <fragment
        android:id="@+id/nav_loved_trips"
        android:name="com.quotum.quotum.quotum.ui.postTrip.PostTripFragment"
        android:label="@string/menu_loved"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_trip_history"
        android:name="com.quotum.quotum.quotum.ui.tools.ToolsFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.quotum.quotum.quotum.ui.share.ShareFragment"
        android:label="@string/menu_purchase"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_purchase"
        android:name="com.quotum.quotum.quotum.ui.share.ShareFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.quotum.quotum.quotum.ui.send.SendFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>