<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_signup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_15sdp"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:textSize="@dimen/_15sdp"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:hint="@string/fullName"
                android:inputType="text"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:hint="@string/lastName"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_14sdp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sdp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/pink_button_background"
            android:padding="@dimen/_3sdp"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_below="@+id/login_layout"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linear_layout_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginTop="@dimen/_14sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/fb_background"
            android:drawableLeft="@drawable/ic_facebook"
            android:gravity="center"
            android:paddingLeft="@dimen/_12sdp"
            android:text="Facebook"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/insta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/insta_background"
            android:drawableLeft="@drawable/ic_instagram"
            android:paddingLeft="@dimen/_12sdp"
            android:text="Instagram"
            android:textAllCaps="false"
            android:textColor="#000000"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>