<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_14sdp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sdp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/_5sdp"
                android:text="@string/forgot"
                android:textColor="@color/pink"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/pink_button_background"
            android:padding="@dimen/_3sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_below="@+id/login_layout"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/linear_layout_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/login_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/fb_background"
            android:drawableStart="@drawable/ic_facebook"
            android:gravity="center"
            android:paddingStart="@dimen/_12sdp"
            android:text="Facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/login_insta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/insta_background"
            android:drawableStart="@drawable/ic_instagram"
            android:paddingStart="@dimen/_12sdp"
            android:text="Instagram"
            android:textAllCaps="false"
            android:textColor="#000000"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>